Fix overflow width in OperatorUI
[Fixes #166489369]

--- a/operator_ui/src/index.css
+++ b/operator_ui/src/index.css
@@ -8,5 +8,6 @@ body {
 #root {
   height: 100%;
   min-height: 100%;
+  overflow-x: hidden;
   overflow-y: auto !important;
 }
